[BUG #6778] - Console warning message on Firefox with FlexBox Layout

--- a/framework/source/resource/qx/mobile/css/android.css
+++ b/framework/source/resource/qx/mobile/css/android.css
@@ -606,6 +606,9 @@ input, select, .text-area {
   font-weight: normal;
   font-size: 0.8em; }
 
+.list img {
+  display: block; }
+
 .master-detail {
   overflow: hidden; }
 
@@ -779,7 +782,6 @@ input, select, .text-area {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -moz-user-select: -moz-none;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
