--- a/framework/source/resource/qx/mobile/css/indigo.css
+++ b/framework/source/resource/qx/mobile/css/indigo.css
@@ -725,6 +725,9 @@ input, select, .text-area {
   font-weight: normal;
   font-size: 0.8em; }
 
+.list img {
+  display: block; }
+
 .master-detail {
   overflow: hidden; }
 
@@ -991,7 +994,6 @@ input, select, .text-area {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -moz-user-select: -moz-none;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
