--- a/framework/source/resource/qx/mobile/scss/basic/_list.scss
+++ b/framework/source/resource/qx/mobile/scss/basic/_list.scss
@@ -18,3 +18,7 @@
   font-weight: normal;
   font-size: 0.8em;
 }
+
+.list img {
+  display: block;
+}
